# wasm-rust-proto-test

./: Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml
client/: Cargo.toml
client/greeter-bis/: next.config.mjs  package-lock.json  package.json
client/greeter-bis/src/app/: layout.tsx  page.tsx
client/greeter-bis/src/components/: test.tsx
client/proto/: lib.rs
client/src/: lib.rs
proto-gen/: Cargo.toml
proto-gen/src/: helloworld.v1.rs  helloworld.v1.serde.rs  helloworld.v1.tonic.rs  lib.rs
proto/helloworld/v1/: helloworld.proto
server/: Cargo.toml
server/src/: main.rs
src/srv/: main.rs
struct_accessor_macro/: Cargo.toml
struct_accessor_macro/src/: lib.rs
