[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.30"
http = "1.1.0"
prost = "0.13.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.1"
tonic-web = "0.12.1"
tower-http = { version = "0.5.2", default-features = false, features = [
    "cors",
] }

protos = { path = "../proto-gen" , features = ["helloworld-v1"] }
